More spacing fixes

--- a/dev/web/css/main.css
+++ b/dev/web/css/main.css
@@ -533,6 +533,7 @@ body,
 }
 
 .masthead {
+    margin: 0;
     font-weight: 400;
 }
 
